# nervum

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
docs/: deployment.md  sdn-controller-plan.md  user-guide.md
docs/integrations/: PROMPT-FOR-TESTUM-TEAM.md  testum.md
docs/testing/: e2e-qemu.md
scripts/e2e/: qemu-cleanup.sh  qemu-collect-logs.sh  qemu-dp.sh  qemu-n0-remote.sh  qemu-n0.sh  qemu-n1.sh  qemu-n2.sh  qemu-n3.sh  qemu-wait-for-api.sh
src/netos_agent/: __init__.py
src/netos_agent/adapters/: __init__.py
src/netos_agent/app/: __init__.py  config.py  container.py  logging.py  main.py
src/netos_agent/core/: __init__.py
src/netos_agent/ports/: __init__.py  dhcp.py  dns.py  firewall.py  ovsdb.py  snapshots.py  system.py
src/sdn_controller/: __init__.py
src/sdn_controller/adapters/: __init__.py  audit_archive.py  locks.py  secret_store.py  security.py  webhook.py
src/sdn_controller/app/: __init__.py  config.py  container.py  logging.py  main.py  openapi_export.py  tracing.py
src/sdn_controller/cli/: __init__.py  client.py  format.py  main.py
src/sdn_controller/core/: __init__.py
src/sdn_controller/migrations/: env.py
src/sdn_controller/ports/: __init__.py  agent.py  audit_archive.py  locks.py  persistence.py  secret_store.py  security.py  webhook_sender.py
tests/: conftest.py
tests/e2e_dp/: conftest.py  test_dp_dataplane_qemu.py
tests/e2e_dp/helpers/: ssh_exec.py
tests/e2e_qemu/: __init__.py  conftest.py  test_n0_multitenancy_qemu.py  test_n1_logical_ports_qemu.py  test_n2_security_policy_qemu.py  test_n3_router_floatingip_bgp_ha_qemu.py
tests/e2e_qemu/helpers/: __init__.py  api_client.py  assertions.py  db_inspection.py  waiters.py
tests/integration/: test_apply_edge_services.py  test_apply_network.py  test_backup_http.py  test_cli.py  test_enrollment_http.py  test_health_probes.py  test_http_agent_client.py  test_http_api.py  test_ipam_http.py  test_n1_http.py  test_n2_http.py  test_n3_http.py  test_n4_http.py  test_n5_http.py  test_observability_http.py  test_outbox_integration.py  test_projects_http.py  test_secret_store_persistence.py  test_security_http.py  test_snapshot_events.py  test_sql_enrollment_repository.py  test_sql_ipam_repository.py  test_sql_repositories.py  test_sqlite_wiring.py  test_topology_http.py  test_webhooks_http.py
tests/unit/: test_agent_mtls.py  test_audit_entity.py  test_audit_use_cases.py  test_background_sweeps.py  test_backup_roundtrip.py  test_cli_format.py  test_create_network_use_case.py  test_diff_engine.py  test_drift_scan.py  test_edge_services_diff.py  test_edge_services_domain.py  test_enrollment_token_entity.py  test_enrollment_use_cases.py  test_ip_allocator.py  test_locks.py  test_n1.py  test_n2.py  test_n3.py  test_n4.py  test_n5.py  test_network_entity.py  test_network_spec_hash.py  test_node_entity.py  test_node_snapshots.py  test_node_tls_thumbprint.py  test_operation_state_machine.py  test_outbox.py  test_planner.py  test_projects.py  test_rate_limit.py  test_secret_store.py  test_security_roles.py  test_service_account_use_cases.py  test_subnet_ipam.py  test_tls_config.py  test_topology_use_case.py  test_tracing.py  test_webhooks.py
(+205 files in other folders)
