[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "sdn-controller"
version = "0.1.0"
description = "Declarative SDN Controller with port/adapter architecture, northbound REST API and NetOS Agent southbound."
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Nervum" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Framework :: FastAPI",
    "Topic :: System :: Networking",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "anyio>=4.6",
    "httpx>=0.27",
    # Persistence: SQLAlchemy adapter targets SQLite for the MVP; the optional
    # ``postgres`` extra below only adds the asyncpg driver for the same adapter.
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML",
]
postgres = [
    "asyncpg>=0.30",
]

[project.scripts]
sdn-controller = "sdn_controller.app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/sdn_controller"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pyflakes / pycodestyle
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "ASYNC",         # async lints
    "PL",            # pylint subset
    "TID",           # tidy imports
    "S",             # bandit subset
]
ignore = [
    "PLR0913",  # too many arguments — DTOs and constructors need them
    "S101",     # assert in tests is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["sdn_controller"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

[tool.coverage.run]
branch = true
source = ["sdn_controller"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
